use jdk21 for windows aarch64